Fix overflow issue in header component

--- a/components/header/src/index.scss
+++ b/components/header/src/index.scss
@@ -17,7 +17,6 @@
   line-height: 0;
   margin-inline-start: calc(50% - 20px);
   min-height: 124px;
-  width: 100%;
 }
 
 @media (min-width: 495px) {
